load_balancer.tf
resource "aws_security_group" "lb" {
  name   = format("%s-lb", var.project_name)
  vpc_id = data.aws_ssm_parameter.vpc.value

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group_rule" "ingress_80" {
  cidr_blocks       = ["0.0.0.0/0"]
  from_port         = 80
  to_port           = 80
  description       = "Allow traffic at port 80"
  protocol          = "tcp"
  security_group_id = aws_security_group.lb.id
  type              = "ingress"
}

resource "aws_security_group_rule" "ingress_443" {
  cidr_blocks       = ["0.0.0.0/0"]
  from_port         = 443
  to_port           = 443
  description       = "Allow traffic at port 443"
  protocol          = "tcp"
  security_group_id = aws_security_group.lb.id
  type              = "ingress"
}

resource "aws_lb" "main" {
  name               = format("%s-lb", var.project_name)
  internal           = var.load_balancer_internal
  load_balancer_type = var.load_balancer_type

  security_groups = [aws_security_group.lb.id]

  subnets = [
    data.aws_ssm_parameter.public_subnet_2a.value,
    data.aws_ssm_parameter.public_subnet_2b.value,
    data.aws_ssm_parameter.public_subnet_2c.value
  ]

  enable_cross_zone_load_balancing = false
  enable_deletion_protection       = false
}
